--- a/style/index.css
+++ b/style/index.css
@@ -13,6 +13,32 @@ body {
     src: url(Uber.woff);
 }
 
+/*animacao scrool*/
+[data-anime]{
+    opacity: 0;
+    transition: 0.7s;
+}
+[data-anime="left"]{
+    transform: translate3d(-50px,0,0);/*x y z*/
+}
+
+[data-anime="right"]{
+    transform: translate3d(50px,0,0);/*x y z*/
+}
+
+[data-anime="top"] {
+    transform: translate3d(0, -50px, 0);
+}
+
+[data-anime="bottom"] {
+    transform: translate3d(0, 50px, 0);
+}
+
+[data-anime].animate{
+    opacity: 1;
+    transform: translate3d(0,0,0);/*x y z*/
+}
+
 /*-------------navbar-------------*/
 .nav {
     width: 100%;
@@ -54,7 +80,7 @@ body {
 .s-inicio {
     width: 100%;
     height: 25vw;
-    margin-top: 54px;
+    margin-top: 30px;
     background-image: url(../img/coding.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -225,6 +251,7 @@ body {
     font-weight: 300;
     letter-spacing: 1px;
     text-align: center;
+    transition: 1.5s; 
 }
 
 .tecnologias {
@@ -237,6 +264,7 @@ body {
 .tecnologias img {
     height: 4vw;
     margin: auto 1%;
+    transition: 1.5s;
 }
 
 /*-----------contatos-----------*/
@@ -512,3 +540,4 @@ body {
     font-family:Helvetica Neue, sans-serif;
 
 }
+
