--- a/style/projetos.css
+++ b/style/projetos.css
@@ -1,6 +1,6 @@
 .projetos-carousel {
   width: 100%;
-  height: 30vw;
+  padding: 3vw 0;
   display: flex;
   justify-content: center;
   margin-top: -1vw;
@@ -54,10 +54,10 @@
   background-color: #000000e3;
   transition: 0.3s;
   opacity: 0;
-  
+
 }
 
-.projeto-principal-titulo{
+.projeto-principal-titulo {
   width: 100%;
   color: #BAD2E3;
   text-align: center;
@@ -67,7 +67,7 @@
   margin-top: 1.5vw;
 }
 
-.projeto-principal-texto{
+.projeto-principal-texto {
   margin: 1.3vw 2vw;
   font-family: Inter, Roboto, Helvetica Neue, sans-serif;
   font-size: 0.9vw;
@@ -89,15 +89,17 @@
   text-shadow: 1px 0px 3px #000;
 }
 
-#link-repositorio:hover{
+#link-repositorio:hover {
   background-color: #12506855;
-    border-color: #fff;
-    color: #fff;
+  border-color: #fff;
+  color: #fff;
 }
 
 #principal:hover {
   transform: scale(1.1);
-}#principal:hover .projeto-principal-conteudo{
+}
+
+#principal:hover .projeto-principal-conteudo {
   opacity: 1;
 }
 
@@ -127,4 +129,76 @@
   cursor: pointer;
   z-index: 1;
   box-sizing: border-box;
+}
+
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+  .projetos-carousel {
+    width: 100%;
+    padding: 7vw 0;
+    display: flex;
+    justify-content: center;
+    margin-top: -1vw;
+  }
+
+  #principal {
+    height: 70vw;
+    width: 70vw;
+    margin-left: -27vw;
+    margin-right: -27vw;
+  }
+
+  #leftItem,#rightItem  {
+    display: none;
+  }
+
+  #leftPrev,#rightPrev {
+    height: 40vw;
+    width: 40vw;
+  }
+
+  .projeto-principal-conteudo {
+    height: 80vw;
+    width: 80vw;
+    background-color: #000000e3;
+    transition: 0.3s;
+    opacity: 0;
+  }
+
+  .projeto-principal-titulo {
+    width: 100%;
+    color: #BAD2E3;
+    text-align: center;
+    font-family: Uber, Roboto, Helvetica Neue, sans-serif;
+    font-size: 3vw;
+    font-weight: 100;
+    margin-top: 1.5vw;
+  }
+
+  .projeto-principal-texto {
+    margin: 1.3vw 2vw;
+    font-family: Inter, Roboto, Helvetica Neue, sans-serif;
+    font-size: 0.9vw;
+  }
+
+
+  #link-repositorio {
+    margin-top: -3vw;
+    width: 13vw;
+    padding: 0.5vw 1.5vw;
+    background-color: transparent;
+    color: #BAD2E3;
+    font-family: Roboto, Helvetica Neue, sans-serif;
+    font-size: 0.8vw;
+    text-align: center;
+    border-radius: 3px;
+    border: 2px solid #BAD2E3;
+    text-decoration: none;
+    text-shadow: 1px 0px 3px #000;
+  }
+
 }
