--- a/style/projetos.css
+++ b/style/projetos.css
@@ -136,22 +136,28 @@
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .projetos-carousel {
     width: 100%;
-    padding: 7vw 0;
+    padding: 10vw 0;
     display: flex;
     justify-content: center;
-    margin-top: -1vw;
+    margin-top: 6vw;
+    
   }
 
   #principal {
-    height: 70vw;
-    width: 70vw;
-    margin-left: -27vw;
-    margin-right: -27vw;
+    height: 64vw;
+    width: 64vw;
+    margin-left: -25vw;
+    margin-right: -25vw;
   }
-
+  #principal:hover {
+    transform: scale(1.3);
+  }#principal:hover #link-repositorio{
+    display: block;
+  }
+  
   #leftItem,#rightItem  {
     display: none;
   }
@@ -162,8 +168,8 @@
   }
 
   .projeto-principal-conteudo {
-    height: 80vw;
-    width: 80vw;
+    height: 100%;
+    width: 100%;
     background-color: #000000e3;
     transition: 0.3s;
     opacity: 0;
@@ -174,31 +180,33 @@
     color: #BAD2E3;
     text-align: center;
     font-family: Uber, Roboto, Helvetica Neue, sans-serif;
-    font-size: 3vw;
+    font-size: 5vw;
     font-weight: 100;
-    margin-top: 1.5vw;
+    margin-top: 2vw;
   }
 
   .projeto-principal-texto {
     margin: 1.3vw 2vw;
     font-family: Inter, Roboto, Helvetica Neue, sans-serif;
-    font-size: 0.9vw;
+    font-size: 2.6vw;
   }
 
 
   #link-repositorio {
-    margin-top: -3vw;
-    width: 13vw;
+    margin-top: -7vw;
+    width: 40vw;
     padding: 0.5vw 1.5vw;
     background-color: transparent;
     color: #BAD2E3;
     font-family: Roboto, Helvetica Neue, sans-serif;
-    font-size: 0.8vw;
+    font-size: 4vw;
+    font-weight: 400;
     text-align: center;
     border-radius: 3px;
-    border: 2px solid #BAD2E3;
+    border: 1px solid #BAD2E3;
     text-decoration: none;
     text-shadow: 1px 0px 3px #000;
+    display: none;
   }
 
 }
