--- a/style/index-responsive.css
+++ b/style/index-responsive.css
@@ -1,14 +1,9 @@
 @media only screen and (max-width: 500px) {
 
-    /*--.-----------inicio-------------*/
+    /*-------------inicio-------------*/
 
     .s-inicio {
-        width: 100%;
         height: 55vw;
-        margin-top: 30px;
-        background-image: url(../img/coding.jpg);
-        background-attachment: fixed;
-        background-repeat: no-repeat;
         background-size: 150% ;
         background-position: -7vw -80px;
         opacity: 10%;
@@ -16,17 +11,9 @@
 
     .s-conteudo {
         padding-top: 65px;
-        position: absolute;
-        top: -1px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
     }
 
     .inicio-txt {
-        color: #fff;
-        text-align: center;
-        margin: auto;
         margin-top: 10%;
     }
 
@@ -36,7 +23,6 @@
 
     .inicio-subtitulo {
         font-size: 4vw;
-        margin-top: 1%;
     }
 
     .inicio-subtitulo span {
@@ -46,7 +32,7 @@
     /*-------------sobre-------------*/
 
     .s-sobre {
-        padding: 5% 0;
+        padding: 15% 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -61,21 +47,16 @@
         width: 60vw;
         height: 60vw;
         margin: 0 auto;
-        border-radius: 100%;
-        background-color: #00ffff22;
     }
 
     .img-perfil {
-        width: 96%;
-        border-radius: 100%;
+        width: 97%;
     }
 
     .sobre-texto {
         width: 80%;
-        height: 100%;
-        color: #ffffff;
         font-size: 4.5vw;
-        padding-top: 0.4%;
+        margin-left: 5px;
     }
 
     .s-titulo {
@@ -110,11 +91,11 @@
 
     .tecnologias-titulo {
         font-size: 5vw;
-        margin-top: 2vw;
+        margin-top: 6vw;
     }
 
     .tecnologias {
-        margin-top: 4vw;
+        margin-top: 6vw;
     }
 
     .tecnologias img {
@@ -148,14 +129,11 @@
 
     .redes-item a {
         font-size: 6vw;
-        color: #fff;
-        font-family: Roboto, Helvetica Neue, sans-serif;
         transition: 0.5s;
         text-decoration: none;
     }
 
     .redes-item a:hover {
-        color: #00ffff;
         padding-left: 0;
     }
 
@@ -197,32 +175,17 @@
         width: 70%;
         padding: 2.5% 5%;
         outline: 0;
-        background-color: #0A303F;
         border: 2px solid transparent;
-        color: #fff;
-        font-family: Roboto, Helvetica Neue, sans-serif;
         font-weight: 0;
         font-size: 4.5vw;
         border-radius: 5px;
     }
-
-    .contatos-form input:focus {
-        border: 1.8px solid #BAD2E3;
-    }
-
-    .contatos-form textarea:focus {
-        border: 1.8px solid #BAD2E3;
-    }
-
 
     .contatos-form button {
         margin-top: 5%;
         width: 80%;
         padding: 2vw 0;
         outline: 0;
-        background-color: #0A303F;
-        color: #BAD2E3;
-        font-family: Roboto, Helvetica Neue, sans-serif;
         font-size: 5.5vw;
         border-radius: 3px;
         border: 2px solid #BAD2E3;
@@ -230,17 +193,10 @@
         transition: 0.2s;
     }
 
-    .contatos-form button:hover {
-        background-color: #125068;
-        border-color: #fff;
-        color: #fff;
-    }
-
     /*-----------carreira-----------*/
 
     .s-carreira {
         margin-top: 0;
-        font-family: Roboto, Helvetica Neue, sans-serif;
         padding: 0;
         display: flex;
         flex-direction: column;
@@ -267,8 +223,6 @@
     .formacao-item {
         margin-top: 8vw;
         margin-left: 0;
-        display: flex;
-        color: #D9D9D9;
     }
 
     .formacao-item img {
@@ -284,17 +238,14 @@
     }
 
     .formacao-item-curso {
-        font-family: Inter, Roboto, Helvetica Neue, sans-serif;
         font-size: 4.3vw;
         font-weight: 300;
         margin-top: 0.1vw;
     }
 
     .formacao-item-periodo {
-        font-family: Inter, Roboto, Helvetica Neue, sans-serif;
         font-size: 4.3vw;
         font-weight: 500;
-        color: #4E98CD;
     }
 
     .cursos {
@@ -304,14 +255,11 @@
     .cursos-item {
         margin-top: 8vw;
         margin-left: 0;
-        color: #D9D9D9;
     }
 
     .cursos-item-titulo {
-        font-family: Uber, Roboto, Helvetica Neue, sans-serif;
         font-size: 6vw;
         font-weight: 100;
-        color: #D9D9D9;
     }
 
     .cursos-item-curso {
@@ -324,7 +272,6 @@
         font-size: 5vw;
         font-weight: 500;
         margin-top: 2vw;
-        color: #4E98CD;
     }
 
     .carreira-right {
@@ -336,33 +283,26 @@
         font-size: 7vw;
         margin-top: 10%;
         margin-left: 0;
-        font-weight: 100;
         margin-bottom: -1vw;
-        color: #fff;
     }
 
     .experiencia-item {
         margin-top: 7vw;
         margin-left: 0;
-        color: #D9D9D9;
     }
 
     .experiencia-item-titulo {
-        font-family: Roboto, Helvetica Neue, sans-serif;
         font-size: 5vw;
         font-weight: 500;
-        color: #D9D9D9;
     }
 
     .experiencia-item-curso {
-        font-family: Inter, Roboto, Helvetica Neue, sans-serif;
         font-size: 4.5vw;
         font-weight: 300;
         margin-top: 1.5vw;
     }
 
     .experiencia-item-periodo {
-        font-family: Inter, Roboto, Helvetica Neue, sans-serif;
         font-size: 4.5vw;
         font-weight: 500;
         margin-top: 2vw;
@@ -386,9 +326,7 @@
         background-color: #03141B;
         font-size: 4vw;
         padding: 4vw;
-        font-family: Inter, Roboto, Helvetica Neue, sans-serif;
         font-weight: 300;
-
     }
 
     .footer-legenda a {
@@ -401,13 +339,10 @@
         padding-bottom: 6vw;
         font-size: 4.5vw;
         background-color: #00223A;
-        font-family: Dancing Script, Roboto, Helvetica Neue, sans-serif;
     }
 
     .footer-frase b {
         font-size: 5vw;
-        font-family: Helvetica Neue, sans-serif;
-
     }
 
 }
