--- a/style/projetos.css
+++ b/style/projetos.css
@@ -73,7 +73,6 @@
   font-size: 0.9vw;
 }
 
-
 #link-repositorio {
   margin-top: -3vw;
   width: 13vw;
@@ -99,9 +98,7 @@
   transform: scale(1.1);
 }
 
-#principal:hover .projeto-principal-conteudo {
-  opacity: 1;
-}
+
 
 #leftPrev:hover {
   opacity: 1;
@@ -132,30 +129,36 @@
 }
 
 
+.projetos-sliders{
+  display: none;
+}
 
-
+@media only screen and (min-width: 500px){
+  #principal:hover .projeto-principal-conteudo {
+  opacity: 1;
+}
+}
 
 
 @media only screen and (max-width: 500px) {
+  
+
   .projetos-carousel {
     width: 100%;
-    padding: 10vw 0;
+    padding: 8vw 0;
     display: flex;
     justify-content: center;
-    margin-top: 6vw;
-    
+    margin-top: 0;
   }
 
   #principal {
-    height: 64vw;
-    width: 64vw;
-    margin-left: -25vw;
-    margin-right: -25vw;
+    height: 82vw;
+    width: 80vw;
+    margin-left: -33vw;
+    margin-right: -33vw;
   }
   #principal:hover {
-    transform: scale(1.3);
-  }#principal:hover #link-repositorio{
-    display: block;
+    transform: scale(1.0);
   }
   
   #leftItem,#rightItem  {
@@ -163,13 +166,13 @@
   }
 
   #leftPrev,#rightPrev {
-    height: 40vw;
+    height: 45vw;
     width: 40vw;
   }
 
   .projeto-principal-conteudo {
-    height: 100%;
-    width: 100%;
+    height: 101%;
+    width: 101%;
     background-color: #000000e3;
     transition: 0.3s;
     opacity: 0;
@@ -188,7 +191,7 @@
   .projeto-principal-texto {
     margin: 1.3vw 2vw;
     font-family: Inter, Roboto, Helvetica Neue, sans-serif;
-    font-size: 2.6vw;
+    font-size: 3.5vw;
   }
 
 
@@ -206,7 +209,25 @@
     border: 1px solid #BAD2E3;
     text-decoration: none;
     text-shadow: 1px 0px 3px #000;
-    display: none;
+    opacity: 0;
+  }
+
+  .projetos-sliders{
+    display: block;
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+  }
+  .projetos-sliders button{
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    border: 0;
+    border-radius: 50%;
+    padding: 10px 12px;
+    font-size: 8vw;
+    margin: 0 10vw;
+    background-color: #7fffd41b;
   }
 
 }
