--- a/style/index-responsive.css
+++ b/style/index-responsive.css
@@ -4,7 +4,7 @@
 
     .s-inicio {
         height: 55vw;
-        background-size: 150% ;
+        background-size: 150%;
         background-position: -7vw -80px;
         opacity: 10%;
     }
@@ -89,6 +89,74 @@
         font-size: 6vw;
     }
 
+
+    .destaque {
+        flex-direction: column;
+        align-items: center;
+        padding: 10% 0;
+    }
+
+    .card-box {
+        width: 90%;
+        padding: 0;
+    }
+
+    .destaque .card {
+        height: 30vw;
+        width: 60vw;
+    }
+
+    .card .glow {
+        position: absolute;
+        border-radius: 10px;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-image: radial-gradient(circle at 50% -20%,
+                #ffffff1c,
+                #0000000f);
+    }
+
+    #c2 {
+        margin-top: 2%;
+        margin-left: 10%;
+    }
+
+    .desc {
+        width: 80%;
+        padding-left: 5%;
+    }
+
+    .desc div {
+        padding: 0;
+    }
+
+    .desc-title {
+        font-size: 6vw;
+        margin-top: 3%;
+    }
+
+    .desc-subtitle {
+        font-size: 3vw;
+    }
+
+    .desc-txt {
+        font-size: 4vw;
+    }
+
+    .desc-tecs {
+        display: flex;
+        justify-content: center;
+        margin-top: 2vw;
+    }
+
+    .desc-tecs img {
+        height: 10vw;
+        margin: auto 5%;
+        margin-top: 5%;
+    }
+
     .tecnologias-titulo {
         font-size: 5vw;
         margin-top: 6vw;
@@ -145,7 +213,9 @@
     #mail {
         font-size: 6.5vw;
         padding-right: 2.3vw;
-    }#mail-text{
+    }
+
+    #mail-text {
         font-size: 5vw;
     }
 
@@ -201,7 +271,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
     }
 
     .carreira-divisao {
