--- a/style/index.css
+++ b/style/index.css
@@ -229,6 +229,7 @@ body {
 }
 
 .destaque {
+    transition: 1.5s;
     display: flex;
     background-color: #072e3d;
     margin-top: 3%;
@@ -284,10 +285,9 @@ body {
     width: 60%;
 }
 .desc div{
-    padding: 0 13%;
+    padding: 0 15% 0 13% ;
 }
 .desc-title{
-
     font-size: 2.3vw;
     font-weight: 400;
     margin-top: 5%;
